--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,17 +8,14 @@ jobs:
         steps:
             - checkout
             - run:
-                name: coding style check
+                name: setup enviroment
                 command: |
-                    sudo pip3 install flake8
-                    flake8 .
+                    source venv/bin/activate
+                    pip install --quiet -r requirements.txt
+
             - run:
-                name: install pip module
-                command: |
-                    sudo pip install --quiet -r requirements.txt
-            - run:
-                name: run pytest
+                name: run style-check, pytest
                 working_directory: ./app
                 command: |
-                    sudo pip install pytest
-                    pytest
+                    flake8
+                    python3 -m pytest
