--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
             - run:
                 name: setup enviroment
                 command: |
+                    python3 -m venv venv
                     source venv/bin/activate
                     pip install --quiet -r requirements.txt
 
