--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,12 +11,13 @@ jobs:
                 name: setup enviroment
                 command: |
                     python3 -m venv venv
-                    source venv/bin/activate
+                    . venv/bin/activate
                     pip install --quiet -r requirements.txt
 
             - run:
                 name: run style-check, pytest
                 working_directory: ./app
                 command: |
+                    . venv/bin/activate
                     flake8
                     python3 -m pytest
